fix close button getting cut off

--- a/_sass/components.scss
+++ b/_sass/components.scss
@@ -164,6 +164,7 @@
 
 .close-button {
   display: block;
+  float: right;
   padding-top: 0;
   margin-bottom: 12px;
   text-align: right;
